--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        " 'Ayrat Badykov (ayrat555)']"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        " 'Neo23x0']"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        " 'https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/USA_flag_on_television.svg/30px-USA_flag_on_television.svg.png']"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        " '/wiki/Pyton']"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "['Title 2 - The Congress']"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
        " 'YASER ABDEL SAID']"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
      "output_type": "stream",
      "text": [
       "['2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27']\n",
-      "['16:31:44.2', '16:14:09.0', '16:12:09.0', '15:51:31.8', '15:51:20.1', '15:44:25.0', '15:39:30.5', '15:22:10.6', '14:49:19.0', '14:43:00.6', '14:14:03.4', '14:05:16.0', '13:36:30.0', '12:48:35.9', '12:47:27.4', '12:45:41.0', '12:36:35.0', '11:57:30.0', '11:45:34.0', '11:34:15.8']\n"
+      "['17:38:25.0', '17:20:30.0', '16:31:44.2', '16:14:09.0', '16:12:09.0', '15:51:31.8', '15:51:20.1', '15:44:25.0', '15:39:30.5', '15:22:10.6', '14:49:19.0', '14:46:54.4', '14:43:00.6', '14:14:03.4', '14:05:16.0', '13:36:30.0', '12:48:35.9', '12:47:27.4', '12:45:41.0', '12:36:35.0']\n"
      ]
     }
    ],
@@ -583,8 +583,167 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Latitude:  ['50.26 N', '8.31 N', '39.35 N', '2.42 S', '18.40 N', '45.68 N', '39.88 N', '2.49 S', '21.89 S', '43.80 N', '19.12 N', '38.17 N', '40.71 N', '20.74 S', '2.31 S', '8.37 N', '2.72 S', '39.57 N', '2.55 S', '29.65 S']\n",
+      "Longitude:  ['18.71 E', '82.91 W', '123.31 W', '138.62 E', '105.50 W', '26.78 E', '15.38 E', '138.58 E', '168.71 E', '15.38 E', '70.47 W', '36.33 E', '16.56 E', '178.02 W', '138.88 E', '82.85 W', '138.36 E', '26.08 E', '138.61 E', '71.28 W']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst8=[]\n",
+    "lst9=[]\n",
+    "lst10=[]\n",
+    "for i in soup.select('td.tabev1')[:40]:\n",
+    "    lst8.append(i.get_text().rstrip())\n",
+    "for i in soup.select('td.tabev2')[:60]:\n",
+    "    lst9.append(i.get_text().rstrip())\n",
+    "for i in range(len(lst9)):\n",
+    "    if (i+1)%3==0:\n",
+    "        continue\n",
+    "    else:\n",
+    "        lst10.append(lst9[i])\n",
+    "latitude=[]\n",
+    "longitude=[]\n",
+    "for i in range(len(lst8)):\n",
+    "    if i%2==0:\n",
+    "        latitude.append(lst8[i]+' '+lst10[i])\n",
+    "    else: longitude.append(lst8[i]+' '+lst10[i])\n",
+    "print('Latitude: ',latitude)\n",
+    "print('Longitude: ',longitude)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['POLAND', 'PANAMA-COSTA RICA BORDER REGION', 'NORTHERN CALIFORNIA', 'PAPUA, INDONESIA', 'OFF COAST OF JALISCO, MEXICO', 'ROMANIA', 'SOUTHERN ITALY', 'PAPUA, INDONESIA', 'LOYALTY ISLANDS', 'ADRIATIC SEA', 'DOMINICAN REPUBLIC', 'CENTRAL TURKEY', 'SOUTHERN ITALY', 'FIJI REGION', 'PAPUA, INDONESIA', 'PANAMA-COSTA RICA BORDER REGION', 'PAPUA, INDONESIA', 'NEAR THE COAST OF WESTERN TURKEY', 'PAPUA, INDONESIA', 'COQUIMBO, CHILE']\n"
+     ]
+    }
+   ],
+   "source": [
+    "region=[]\n",
+    "\n",
+    "for i in soup.select('td.tb_region')[:20]:\n",
+    "    region.append(i.get_text().strip())\n",
+    "print(region)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df=pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Region Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>17:38:25.0</td>\n",
+       "      <td>50.26 N</td>\n",
+       "      <td>18.71 E</td>\n",
+       "      <td>POLAND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>17:20:30.0</td>\n",
+       "      <td>8.31 N</td>\n",
+       "      <td>82.91 W</td>\n",
+       "      <td>PANAMA-COSTA RICA BORDER REGION</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>16:31:44.2</td>\n",
+       "      <td>39.35 N</td>\n",
+       "      <td>123.31 W</td>\n",
+       "      <td>NORTHERN CALIFORNIA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>16:14:09.0</td>\n",
+       "      <td>2.42 S</td>\n",
+       "      <td>138.62 E</td>\n",
+       "      <td>PAPUA, INDONESIA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>16:12:09.0</td>\n",
+       "      <td>18.40 N</td>\n",
+       "      <td>105.50 W</td>\n",
+       "      <td>OFF COAST OF JALISCO, MEXICO</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date        Time Latitude Longitude                      Region Name\n",
+       "0  2019-06-27  17:38:25.0  50.26 N   18.71 E                           POLAND\n",
+       "1  2019-06-27  17:20:30.0   8.31 N   82.91 W  PANAMA-COSTA RICA BORDER REGION\n",
+       "2  2019-06-27  16:31:44.2  39.35 N  123.31 W              NORTHERN CALIFORNIA\n",
+       "3  2019-06-27  16:14:09.0   2.42 S  138.62 E                 PAPUA, INDONESIA\n",
+       "4  2019-06-27  16:12:09.0  18.40 N  105.50 W     OFF COAST OF JALISCO, MEXICO"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "columns={'Date':date,'Time':hour,'Latitude':latitude,'Longitude':longitude,'Region Name':region}\n",
+    "for i in columns:\n",
+    "    df[i]=columns[i]\n",
+    "\n",
+    "display(df.head())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -600,7 +759,7 @@
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url ='https://hackevents.co/hackathons'"
+    "url8 ='https://hackevents.co/hackathons'"
    ]
   },
   {
@@ -906,18 +1065,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
