--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -40,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
+    "import requests as req\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
     "\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,11 +77,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<h1 class=\"h3 lh-condensed\"><a href=\"/peterbourgon\">Peter Bourgon</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/tomaka\">Pierre Krieger</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/carllerche\">Carl Lerche</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/mdlayher\">Matt Layher</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/claudiosanches\">Claudio Sanches</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/jeremylong\">Jeremy Long</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/EddyVerbruggen\">Eddy Verbruggen</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/kylekatarnls\">Kyle</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/geerlingguy\">Jeff Geerling</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/kwight\">Kirk Wight</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/shiffman\">Daniel Shiffman</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/luin\">子骅</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/bkchr\">Bastian Köcher</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/shiftkey\">Brendan Forster</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/beberlei\">Benjamin Eberlei</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/tgriesser\">Tim Griesser</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/saschagrunert\">Sascha Grunert</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/jrfnl\">Juliette</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/caarlos0\">Carlos Alexandro Becker</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/johnbillion\">John Blackbourn</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/hswolff\">Harry Wolff</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/i0natan\">Yoni Goldberg</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/felangel\">Felix Angelov</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/thegecko\">Rob Moran</a></h1>,\n",
+       " <h1 class=\"h3 lh-condensed\"><a href=\"/ayrat555\">Ayrat Badykov</a></h1>]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code"
+    "res = req.get(url)\n",
+    "print(res)\n",
+    "res.text\n",
+    "soup = BeautifulSoup(res.text, 'html.parser')\n",
+    "soup.title\n",
+    "soup\n",
+    "\n",
+    "devs = soup.find_all('h1', {\"class\":\"h3 lh-condensed\"})\n",
+    "devs\n"
    ]
   },
   {
@@ -135,11 +185,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Peter Bourgon /peterbourgon\n",
+      "Pierre Krieger /tomaka\n",
+      "Carl Lerche /carllerche\n",
+      "Matt Layher /mdlayher\n",
+      "Claudio Sanches /claudiosanches\n",
+      "Jeremy Long /jeremylong\n",
+      "Eddy Verbruggen /EddyVerbruggen\n",
+      "Kyle /kylekatarnls\n",
+      "Jeff Geerling /geerlingguy\n",
+      "Kirk Wight /kwight\n",
+      "Daniel Shiffman /shiffman\n",
+      "子骅 /luin\n",
+      "Bastian Köcher /bkchr\n",
+      "Brendan Forster /shiftkey\n",
+      "Benjamin Eberlei /beberlei\n",
+      "Tim Griesser /tgriesser\n",
+      "Sascha Grunert /saschagrunert\n",
+      "Juliette /jrfnl\n",
+      "Carlos Alexandro Becker /caarlos0\n",
+      "John Blackbourn /johnbillion\n",
+      "Harry Wolff /hswolff\n",
+      "Yoni Goldberg /i0natan\n",
+      "Felix Angelov /felangel\n",
+      "Rob Moran /thegecko\n",
+      "Ayrat Badykov /ayrat555\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code"
+    "#names_hrefs = [' '.join((elem.text, elem.a.get('href'))) for elem in devs]\n",
+    "\n",
+    "lst_elements = soup.select(\"h1.h3 a\")\n",
+    "\n",
+    "for e in lst_elements:\n",
+    "    print(e.text, e.attrs[\"href\"])"
    ]
   },
   {
@@ -153,21 +240,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://github.com/trending/python?since=daily'"
+    "url = 'https://github.com/trending/python?since=daily'\n",
+    "res = req.get(url)\n",
+    "res.text\n",
+    "soup2 = BeautifulSoup(res.text, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "bokeh / bokeh\n",
+      "\n",
+      "\n",
+      "\n",
+      "raspberrypi / documentation\n",
+      "\n",
+      "\n",
+      "\n",
+      "celery / celery\n",
+      "\n",
+      "\n",
+      "\n",
+      "ZhuiyiTechnology / nl2sql_baseline\n",
+      "\n",
+      "\n",
+      "\n",
+      "apache / airflow\n",
+      "\n",
+      "\n",
+      "\n",
+      "fishtown-analytics / dbt\n",
+      "\n",
+      "\n",
+      "\n",
+      "tweepy / tweepy\n",
+      "\n",
+      "\n",
+      "\n",
+      "facebookresearch / Detectron\n",
+      "\n",
+      "\n",
+      "\n",
+      "mlflow / mlflow\n",
+      "\n",
+      "\n",
+      "\n",
+      "USTC-Resource / USTC-Course\n",
+      "\n",
+      "\n",
+      "\n",
+      "tensorflow / tensor2tensor\n",
+      "\n",
+      "\n",
+      "\n",
+      "dmlc / tvm\n",
+      "\n",
+      "\n",
+      "\n",
+      "openshift / openshift-ansible\n",
+      "\n",
+      "\n",
+      "\n",
+      "python-telegram-bot / python-telegram-bot\n",
+      "\n",
+      "\n",
+      "\n",
+      "rbgirshick / py-faster-rcnn\n",
+      "\n",
+      "\n",
+      "\n",
+      "microsoft / nni\n",
+      "\n",
+      "\n",
+      "\n",
+      "locustio / locust\n",
+      "\n",
+      "\n",
+      "\n",
+      "googleapis / google-cloud-python\n",
+      "\n",
+      "\n",
+      "\n",
+      "huge-success / sanic\n",
+      "\n",
+      "\n",
+      "\n",
+      "edx / edx-platform\n",
+      "\n",
+      "\n",
+      "\n",
+      "MobSF / Mobile-Security-Framework-MobSF\n",
+      "\n",
+      "\n",
+      "\n",
+      "sabricot / django-elasticsearch-dsl\n",
+      "\n",
+      "\n",
+      "\n",
+      "Julian / jsonschema\n",
+      "\n",
+      "\n",
+      "\n",
+      "scrapy / scrapy\n",
+      "\n",
+      "\n",
+      "\n",
+      "Neo23x0 / sigma\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code"
+    "repo = soup2.select(\"h1.h3 a\")\n",
+    "\n",
+    "for e in repo:\n",
+    "    print(e.text)"
    ]
   },
   {
