--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,17 +522,256 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Region name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>18:00:42.0</td>\n",
+       "      <td>2.49S</td>\n",
+       "      <td>138.45E</td>\n",
+       "      <td>PAPUA, INDONESIA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>17:50:29.1</td>\n",
+       "      <td>19.18N</td>\n",
+       "      <td>155.44W</td>\n",
+       "      <td>ISLAND OF HAWAII, HAWAII</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>17:42:58.7</td>\n",
+       "      <td>38.34N</td>\n",
+       "      <td>14.73E</td>\n",
+       "      <td>SICILY, ITALY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>17:38:25.0</td>\n",
+       "      <td>50.26N</td>\n",
+       "      <td>18.71E</td>\n",
+       "      <td>POLAND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>17:20:30.0</td>\n",
+       "      <td>8.31N</td>\n",
+       "      <td>82.91W</td>\n",
+       "      <td>PANAMA-COSTA RICA BORDER REGION</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>16:31:44.2</td>\n",
+       "      <td>39.35N</td>\n",
+       "      <td>123.31W</td>\n",
+       "      <td>NORTHERN CALIFORNIA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>16:14:09.0</td>\n",
+       "      <td>2.42S</td>\n",
+       "      <td>138.62E</td>\n",
+       "      <td>PAPUA, INDONESIA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>16:12:09.0</td>\n",
+       "      <td>18.40N</td>\n",
+       "      <td>105.50W</td>\n",
+       "      <td>OFF COAST OF JALISCO, MEXICO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>15:51:31.8</td>\n",
+       "      <td>45.68N</td>\n",
+       "      <td>26.78E</td>\n",
+       "      <td>ROMANIA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>15:51:20.1</td>\n",
+       "      <td>39.88N</td>\n",
+       "      <td>15.38E</td>\n",
+       "      <td>SOUTHERN ITALY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>15:44:25.0</td>\n",
+       "      <td>2.49S</td>\n",
+       "      <td>138.58E</td>\n",
+       "      <td>PAPUA, INDONESIA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>15:39:30.1</td>\n",
+       "      <td>21.83S</td>\n",
+       "      <td>168.76E</td>\n",
+       "      <td>LOYALTY ISLANDS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>15:22:10.6</td>\n",
+       "      <td>43.80N</td>\n",
+       "      <td>15.38E</td>\n",
+       "      <td>ADRIATIC SEA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>14:49:19.0</td>\n",
+       "      <td>19.12N</td>\n",
+       "      <td>70.47W</td>\n",
+       "      <td>DOMINICAN REPUBLIC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>14:46:54.4</td>\n",
+       "      <td>38.17N</td>\n",
+       "      <td>36.33E</td>\n",
+       "      <td>CENTRAL TURKEY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>14:43:00.6</td>\n",
+       "      <td>40.71N</td>\n",
+       "      <td>16.56E</td>\n",
+       "      <td>SOUTHERN ITALY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>14:14:03.4</td>\n",
+       "      <td>20.74S</td>\n",
+       "      <td>178.02W</td>\n",
+       "      <td>FIJI REGION</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>14:05:16.0</td>\n",
+       "      <td>2.31S</td>\n",
+       "      <td>138.88E</td>\n",
+       "      <td>PAPUA, INDONESIA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>13:36:30.0</td>\n",
+       "      <td>8.37N</td>\n",
+       "      <td>82.85W</td>\n",
+       "      <td>PANAMA-COSTA RICA BORDER REGION</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2019-06-27</td>\n",
+       "      <td>12:48:35.9</td>\n",
+       "      <td>2.72S</td>\n",
+       "      <td>138.36E</td>\n",
+       "      <td>PAPUA, INDONESIA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Date        Time Latitude Longitude                      Region name\n",
+       "0   2019-06-27  18:00:42.0    2.49S   138.45E                 PAPUA, INDONESIA\n",
+       "1   2019-06-27  17:50:29.1   19.18N   155.44W         ISLAND OF HAWAII, HAWAII\n",
+       "2   2019-06-27  17:42:58.7   38.34N    14.73E                    SICILY, ITALY\n",
+       "3   2019-06-27  17:38:25.0   50.26N    18.71E                           POLAND\n",
+       "4   2019-06-27  17:20:30.0    8.31N    82.91W  PANAMA-COSTA RICA BORDER REGION\n",
+       "5   2019-06-27  16:31:44.2   39.35N   123.31W              NORTHERN CALIFORNIA\n",
+       "6   2019-06-27  16:14:09.0    2.42S   138.62E                 PAPUA, INDONESIA\n",
+       "7   2019-06-27  16:12:09.0   18.40N   105.50W     OFF COAST OF JALISCO, MEXICO\n",
+       "8   2019-06-27  15:51:31.8   45.68N    26.78E                          ROMANIA\n",
+       "9   2019-06-27  15:51:20.1   39.88N    15.38E                   SOUTHERN ITALY\n",
+       "10  2019-06-27  15:44:25.0    2.49S   138.58E                 PAPUA, INDONESIA\n",
+       "11  2019-06-27  15:39:30.1   21.83S   168.76E                  LOYALTY ISLANDS\n",
+       "12  2019-06-27  15:22:10.6   43.80N    15.38E                     ADRIATIC SEA\n",
+       "13  2019-06-27  14:49:19.0   19.12N    70.47W               DOMINICAN REPUBLIC\n",
+       "14  2019-06-27  14:46:54.4   38.17N    36.33E                   CENTRAL TURKEY\n",
+       "15  2019-06-27  14:43:00.6   40.71N    16.56E                   SOUTHERN ITALY\n",
+       "16  2019-06-27  14:14:03.4   20.74S   178.02W                      FIJI REGION\n",
+       "17  2019-06-27  14:05:16.0    2.31S   138.88E                 PAPUA, INDONESIA\n",
+       "18  2019-06-27  13:36:30.0    8.37N    82.85W  PANAMA-COSTA RICA BORDER REGION\n",
+       "19  2019-06-27  12:48:35.9    2.72S   138.36E                 PAPUA, INDONESIA"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "res6 = req.get(url6)\n",
     "soup6 = BeautifulSoup(res6.text, 'html.parser')\n",
     "\n",
     "earthq=pd.DataFrame()\n",
-    "earth[\"Date\"]=[\n",
-    "    s.get_text() for s in soup6.select('tr td.tabev6  ')\n",
-    "]"
+    "earthq[\"Date\"]=[\n",
+    "    s.get_text().split(\"\\xa0\\xa0\\xa0\")[0] for s in soup6.select('tr td.tabev6 b a')\n",
+    "]\n",
+    "earthq[\"Time\"]=[\n",
+    "    s.get_text().split(\"\\xa0\\xa0\\xa0\")[1] for s in soup6.select('tr td.tabev6 b a')\n",
+    "]\n",
+    "\n",
+    "lat_long_n=[s.get_text().rstrip(\"\\xa0\") for s in soup6.select('tr td.tabev1')]\n",
+    "lat_long_h=[s.get_text().rstrip(\"\\xa0\") for s in soup6.select('tr td.tabev2') if s.get_text().rstrip(\"\\xa0\").isalpha()==True]\n",
+    "full_lat_long=[\"{}{}\".format(a,b) for a, b in zip(lat_long_n, lat_long_h)]\n",
+    "\n",
+    "earthq[\"Latitude\"]=full_lat_long[::2]\n",
+    "earthq[\"Longitude\"]=full_lat_long[1::2]\n",
+    "\n",
+    "earthq[\"Region name\"]=[\n",
+    "    s.get_text().lstrip(\"\\xa0\") for s in soup6.select('tr td.tb_region')\n",
+    "]\n",
+    "\n",
+    "last20earth = earthq[:20]\n",
+    "\n",
+    "display(last20earth)"
    ]
   },
   {
@@ -544,12 +783,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url ='https://hackevents.co/hackathons'"
+    "url7 ='https://hackevents.co/hackathons'"
    ]
   },
   {
@@ -558,7 +797,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "res7 = req.get(url7)\n",
+    "soup7 = BeautifulSoup(res7.text, 'html.parser')"
    ]
   },
   {
@@ -578,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
