--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -787,7 +787,6 @@
     "#your code\n",
     "res = req.get(url)\n",
     "soup = BeautifulSoup(res.text, 'html.parser')\n",
-    "#Date = soup.find_all('div', {'class':'usctitlechanged'})\n",
     "\n",
     "dates = soup.select(\"tbody tr td.tabev6 b a\")\n",
     "Date=[]\n",
@@ -828,21 +827,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url ='https://hackevents.co/hackathons'"
+    "url ='https://hackevents.co/search/anything/anywhere/anytime'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['\\u2003 Osnabrück',\n",
+       " '\\u2003Starts\\u20036/27/2019',\n",
+       " '\\u2003Ends\\xa0\\xa0\\u20036/28/2019',\n",
+       " '\\u2003 San Mateo',\n",
+       " '\\u2003Starts\\u20037/5/2019',\n",
+       " '\\u2003Ends\\xa0\\xa0\\u20037/7/2019',\n",
+       " '\\u2003 Nürnberg',\n",
+       " '\\u2003Starts\\u20037/12/2019',\n",
+       " '\\u2003Ends\\xa0\\xa0\\u20037/12/2019',\n",
+       " '\\u2003 Cairo',\n",
+       " '\\u2003Starts\\u20037/29/2019',\n",
+       " '\\u2003Ends\\xa0\\xa0\\u20037/31/2019',\n",
+       " '\\u2003 Milano',\n",
+       " '\\u2003Starts\\u20035/21/2019',\n",
+       " '\\u2003Ends\\xa0\\xa0\\u20038/31/2019',\n",
+       " '\\u2003 Munich',\n",
+       " '\\u2003Starts\\u20039/6/2019',\n",
+       " '\\u2003Ends\\xa0\\xa0\\u20039/8/2019',\n",
+       " '\\u2003 Prague',\n",
+       " '\\u2003Starts\\u20031/31/2019',\n",
+       " '\\u2003Ends\\xa0\\xa0\\u20039/30/2019']"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code"
+    "#your code\n",
+    "res = req.get(url)\n",
+    "soup = BeautifulSoup(res.text, 'html.parser')\n",
+    "\n",
+    "titles = soup.select(\"a h3\")\n",
+    "Title=[]\n",
+    "for e in titles:\n",
+    "    Title.append(e.text)\n",
+    "\n",
+    "places = soup.select(\"a p\")\n",
+    "City=[]\n",
+    "Country=[]\n",
+    "\n",
+    "for e in places:\n",
+    "    City.append(e.text)\n",
+    "    #Country.append(e.text.split(', ')[1])\n",
+    "\n",
+    "\n",
+    "City1=[]\n",
+    "for i in City:\n",
+    "    City1.append(i.split(', ', 1)[0])\n",
+    "\n",
+    "City1"
    ]
   },
   {
